styles/shared.scss
$mainFontStack: 'Sen Variable', 'Arial', system-ui, sans-serif;
$monoFontStack: 'Fira Code', 'Consolas', monospace;

$accent: hsl(215, 50%, 55%);
$accentLight: hsl(215, 50%, 60%);
$accentDark: hsl(215, 50%, 42%);
$dark: hsl(340, 13%, 5%);
$light: hsl(214, 64%, 98%);
$lightAlt: hsl(0, 0%, 100%);

$shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.15);

$floatingRadius: 0.5rem;

$breakpointTablet: 480px;
$breakpointDesktop: 1024px;

:root {
	font: 400 16px/1.65 $mainFontStack;
}

%tracking-tight {
	letter-spacing: -0.05em;
}

